# haka_comic

./: .gitattributes  .gitignore  LICENSE  README.md  alt_store.json  analysis_options.yaml  flutter_launcher_icons.yaml  package_rename_config.yaml  pubspec.yaml
.devcontainer/: README.md  devcontainer.json  install-flutter.sh  setup-linux.sh
.github/workflows/: build-dev.yml  build.yml  build_android.yml  build_dev.yml  build_ios.yml  dev.yml  update_altstore_source.yml
android/app/: build.gradle.kts
integration_test/: simple_test.dart
ios/Runner/: AppDelegate.swift  HakaFolderPickerPlugin.swift  Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart  startup_prepare.dart
lib/config/: app_config.dart  setup_config.dart
lib/database/: download_task_helper.dart  history_helper.dart  images_helper.dart  local_favorites_helper.dart  read_record_helper.dart  tag_block_helper.dart  utils.dart  word_block_helper.dart
lib/mixin/: auto_register_handler.dart  batch_select.dart  blocked_words.dart  pagination.dart  pagination_handler.dart  request.dart
lib/model/: app_data.dart  reader_provider.dart  search_provider.dart  (+2 more)
linux/: CMakeLists.txt
rust/: Cargo.toml
rust/src/: frb_generated.rs
rust/src/api/: compress.rs  mod.rs  simple.rs
rust_builder/: pubspec.yaml
script/: download_opencc_dict.dart  prebuild_inject_font.dart  prebuild_inject_version.dart  setup_hooks.sh  update_alt_store_json.dart
scripts/: version_helper.dart
test/: proxy_controller_test.dart  widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+299 files in other folders)
