[package]
name = "rust_lib_haka_comic"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.12.0"
zip = "8.6.0"
walkdir = "2.5.0"
image = "0.25.10"
rayon = "1.12.0"
human-sort = "0.2.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
